--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,11 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install Toolchain
-      run: rustup update stable && rustup default stable
+      run: rustup update stable && rustup default stable && rustup component add rustfmt
     - name: Install cargo-llvm-cov
       uses: taiki-e/install-action@cargo-llvm-cov
+    - name: Format check
+      run: cargo fmt --all -- --check
     - name: Generate code coverage
       run: cargo llvm-cov --all-features --workspace --codecov --output-path lcov.info
     - name: Archive code coverage results
@@ -32,7 +34,7 @@ jobs:
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
       with:
-        token: bfa5f7b0-adce-4bd0-bc16-864061dbd2c9
+        token: be8874e2-10d6-434f-9d52-db6094de31d6
         files: lcov.info
         name: codecov-umbrella # optional
         fail_ci_if_error: true
