--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "scheduler-api-server"
+path = "src/proto_server.rs"
+
 [dependencies]
+substrait = "0.24.1"
+tonic = "0.11"
+prost = "0.12"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+
+[build-dependencies]
+tonic-build = "0.11"
