--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ name = "scheduler-api-server"
 path = "src/proto_server.rs"
 
 [dependencies]
-substrait = "0.24.1"
+substrait = "0.24.2"
 tonic = "0.11"
-prost = "0.12"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+prost = "0.12.3"
+prost-types = "0.12.3"
+tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
 tonic-build = "0.11"
