--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ name = "scheduler-api-server"
 path = "src/proto_server.rs"
 
 [dependencies]
-datafusion = "36.0.0"
+datafusion = "35.0.0"
 tonic = "0.11"
 prost = "0.12.3"
 prost-types = "0.12.3"
+datafusion-proto = "35.0.0"
 tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
