--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/proto_server.rs"
 
 [dependencies]
 datafusion = "35.0.0"
+datafusion-common = "35.0.0"
 tonic = "0.11"
 prost = "0.12.3"
 prost-types = "0.12.3"
