--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ path = "src/proto_server.rs"
 [dependencies]
 datafusion = "35.0.0"
 datafusion-common = "35.0.0"
+datafusion-expr = "35.0.0"
+datafusion-proto = "35.0.0"
 tonic = "0.11"
 prost = "0.12.3"
 prost-types = "0.12.3"
-datafusion-proto = "35.0.0"
 tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
