--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ datafusion-common = "35.0.0"
 datafusion-expr = "35.0.0"
 datafusion-proto = "35.0.0"
 tonic = "0.11"
+lazy_static = "1.4.0"
+async-recursion = "0.3.1"
 prost = "0.12.3"
 prost-types = "0.12.3"
 tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
