--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ tonic = "0.11"
 prost = "0.12.3"
 prost-types = "0.12.3"
 tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
+async-recursion = "1.0.5"
+more-asserts = "0.3.1"
 
 [build-dependencies]
 tonic-build = "0.11"
