--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ prost-types = "0.12.3"
 tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
 async-recursion = "1.0.5"
 more-asserts = "0.3.1"
+futures = "0.3.30"
 
 [build-dependencies]
 tonic-build = "0.11"
