--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Format check
       run: cargo fmt --all -- --check
     - name: Generate code coverage
-      run: cargo llvm-cov --all-features --workspace --codecov --output-path lcov.info
+      run: cargo llvm-cov --workspace --codecov --output-path lcov.info
     - name: Archive code coverage results
       uses: actions/upload-artifact@v4
       with:
