--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,18 +37,18 @@ jobs:
     - name: Format check
       run: cargo fmt --all -- --check
     - name: Generate code coverage
-      run: cargo llvm-cov --workspace --codecov --output-path lcov.info
+      run: cd scheduler && cargo llvm-cov --workspace --codecov --output-path lcov.info
     - name: Archive code coverage results
       uses: actions/upload-artifact@v4
       with:
         name: code-coverage-report
-        path: lcov.info
+        path: scheduler/lcov.info
         retention-days: 3
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
       with:
         token: bfa5f7b0-adce-4bd0-bc16-864061dbd2c9
-        files: lcov.info
+        files: scheduler/lcov.info
         name: codecov-umbrella # optional
         fail_ci_if_error: true
         verbose: true
