Implement CLI for interactive execution - schedule query now awaits using a tokio oneshot channel as signal - cli will block during the wait - if we want to abort through the cli, we will have to make schedule   query RPC. Cli will need to include an RPC client and the scheduler   api server needs to keep track. - still need to include a kill_query api for scheduler, to be called by   the user and the executors should any errors are produces during the   execution.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 on:
   push:
-    branches: [ "main", "mock_exec" ]
+    branches: [ "main", "cli"]
   pull_request:
     branches: [ "main" ]
 
