--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,7 @@ serde_json = "1"
 sqlparser = { version = "0.44.0", features = ["visitor"] }
 tempfile = "3"
 thiserror = "1.0.44"
-tokio = { version = "1.36", features = ["macros", "rt", "sync"] }
+tokio = { version = "1.36", features = ["macros", "rt", "sync", "fs"] }
 url = "2.2"
 
 [profile.release]
