--- a/scheduler/Cargo.toml
+++ b/scheduler/Cargo.toml
@@ -41,6 +41,7 @@ futures = "0.3.30"
 anyhow = "1.0.82"
 clap = "4.5.4"
 bytes = "0.4.12"
+serial_test = "3.1.1"
 
 [build-dependencies]
 tonic-build = "0.11"
