Add code to build hash table for pipelining

--- a/scheduler/Cargo.toml
+++ b/scheduler/Cargo.toml
@@ -37,6 +37,7 @@ futures = "0.3.30"
 anyhow = "1.0.82"
 clap = "4.5.4"
 bytes = "0.4.12"
+ahash = "0.8.11"
 
 [build-dependencies]
 tonic-build = "0.11"
