--- a/scheduler/Cargo.toml
+++ b/scheduler/Cargo.toml
@@ -38,6 +38,8 @@ anyhow = "1.0.82"
 clap = "4.5.4"
 bytes = "0.4.12"
 ahash = "0.8.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 
 [build-dependencies]
